# shreddedmeat

./: README.md  pyproject.toml  scrapy.cfg
shreddedmeat/: items.py  middlewares.py  pipelines.py  settings.py
shreddedmeat/spiders/: rsspider.py  vulnspider.py
