[tool.poetry]
name = "shreddedmeat"
version = "0.1.0"
description = "web vulnerablity crawler"
authors = ["seaung <seaung.c0m7de@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
